frame/support/test/tests/pallet_ui/pallet_invalid_arg.rs
#[frame_support::pallet(foo)]
pub mod pallet {}

fn main() {}
